[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Sprites/ore_gold.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/ore_iron.png" type="Texture" id=2]
[ext_resource path="res://Scenes/ore_display.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/ore_displayer.gd" type="Script" id=4]
[ext_resource path="res://Assets/Sprites/drill.png" type="Texture" id=5]

[node name="OreDisplayer" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -90.0
margin_bottom = -304.0
script = ExtResource( 4 )
full_inventory_text_color = Color( 1, 0.937255, 0.270588, 1 )
inventory_text_color = Color( 1, 1, 1, 1 )

[node name="IronDisplay" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 48.0
margin_bottom = 16.0

[node name="TextureRect" parent="IronDisplay" index="0"]
texture = ExtResource( 2 )

[node name="RichTextLabel" parent="IronDisplay" index="1"]
text = "0
"

[node name="GoldDisplay" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 52.0
margin_right = 100.0
margin_bottom = 16.0

[node name="TextureRect" parent="GoldDisplay" index="0"]
texture = ExtResource( 1 )

[node name="RichTextLabel" parent="GoldDisplay" index="1"]
text = "0"

[node name="DrillDisplay" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 104.0
margin_right = 152.0
margin_bottom = 16.0

[node name="TextureRect" parent="DrillDisplay" index="0"]
texture = ExtResource( 5 )

[node name="RichTextLabel" parent="DrillDisplay" index="1"]
text = "0"

[editable path="IronDisplay"]
[editable path="GoldDisplay"]
[editable path="DrillDisplay"]
